# data-engineering-projects

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
data/codes/: uk-lad-codes.csv  uk-police-force-codes.csv
project-p1/: README.md  pyproject.toml  requirements.txt
project-p1-p2/: README-P1.md  README-P2.md  requirements.txt
project-p1-p2/data/codes/: uk-la-codes.csv  uk-lsoa-codes.csv
project-p1-p2/src/: main-p1.py  main-p2.py
project-p1-p2/src/common/: db.py
project-p1-p2/src/ingest/: extract.py  load.py  metadata.py  transform.py
project-p1-p2/src/transform/: clean.py  collisions_clean.py  column_mappings.py  curated.py  rules.py
project-p1/src/: ingest.py
project-p1/src/p1/: db.py  extract.py  load.py  main.py  metadata.py  schema.py  transform.py
src/: logging_config.py  main_p1.py  main_p2.py  main_p3.py
src/common/: db.py
src/de_project/: main_p1.py  main_p2.py  main_p3.py  main_p4.py
src/de_project/common/: config.py  db.py
src/de_project/project_p1_p2/ingest/: transform.py
src/de_project/project_p1_p2/transform/: clean.py  code_mappings.py  (+1 more)
src/de_project/project_p4/: README-P4.md  docker-compose.yaml  example.env
src/project_p1_p2/: README-P1.md  README-P2.md
src/project_p1_p2/ingest/: schema.py  transform.py
src/project_p1_p2/transform/: clean.py
src/project_p3/: README-P3.md  analitical-queries.sql
src/project_p3/modeling/: build_dim_date.py  build_dim_location.py  build_dim_severity.py  build_dim_time.py  build_fact_collisions.py
src/project_p3/utils/: utils.py
(+5 files in other folders)
